mcfida/g3/replace_weaker_arc
implicit.c:611:26: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v7 = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)red_cost, ( __m128i)( unsigned __int64)cost); 
                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
implicit.c:611:65: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v7 = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)red_cost, ( __m128i)( unsigned __int64)cost); 
                                                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
implicit.c:612:7: error: use of undeclared identifier 'invalid_operation'
v10 = __OFSUB__( a2[1].flow, flow); 
      ^
implicit.c:400:25: note: expanded from macro '__OFSUB__'
#define __OFSUB__(x, y) invalid_operation // Generate overflow flag for (x-y)
                        ^
implicit.c:617:27: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v12 = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)tail, ( __m128i)( unsigned __int64)head); 
                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
implicit.c:617:62: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v12 = _mm_unpacklo_epi64( ( __m128i)( unsigned __int64)tail, ( __m128i)( unsigned __int64)head); 
                                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
5 errors generated.
